--- a/styles/base.css
+++ b/styles/base.css
@@ -496,6 +496,14 @@ button svg {
     transition-delay: 0.3s;
 }
 
+#menuItems.open .menu-item:nth-child(6) {
+    transition-delay: 0.35s;
+}
+
+#menuItems.open .menu-item:nth-child(7) {
+    transition-delay: 0.4s;
+}
+
 .menu-item:active {
     transform: scale(0.9);
 }
